--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1em;
@@ -144,5 +144,56 @@ button {
 }
 
 .arrow::before {
-  content: "➤";
+  content: '➤';
+}
+
+.container-loader {
+  display: none;
+}
+
+.is-hiden {
+  display: flex;
+  margin: 30px auto;
+  width: 200px;
+  height: 60px;
+  transform: translate(0%);
+}
+
+.circle {
+  width: 20px;
+  height: 20%;
+  position: absolute;
+  border-radius: 50%;
+  background-color: rgb(163, 109, 109);
+  left: 15%;
+  transform-origin: 50%;
+  animation: circle 0.5s alternate infinite ease;
+}
+
+@keyframes circle {
+  0% {
+    top: 60px;
+    height: 5px;
+    border-radius: 50px 50px 25px 25px;
+    transform: scaleX(1.7);
+  }
+  40% {
+    height: 20%;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
+  100% {
+    top: 0%;
+  }
+}
+
+.circle:nth-child(2) {
+  left: 45%;
+  animation-delay: 0.2s;
+}
+
+.circle:nth-child(3) {
+  left: auto;
+  right: 15%;
+  animation-delay: 0.3s;
 }
